# SPH

./: .gitignore  1q  CMakeLists.txt  OakRidgeLeaf.psd  README  README.md  \  background_gl.c  background_gl.h  blink1_light.c  boundary_code  circles_gl.c  circles_gl.h  communication.c  communication.h  controller.cnf  controller_1.cnf  controller_2.cnf  controller_one.cnf  controls.c  controls.h  cursor_gl.c  cursor_gl.h  dividers_gl.c  dividers_gl.h  egl_utils.c  egl_utils.h  exit_menu_gl.c  exit_menu_gl.h  fileio.c  fileio.h  fluid.c  fluid.cu  fluid.h  fluid_cuda.cu  fluid_cuda.h  font.frag  font.vert  font_es.frag  font_es.vert  (+45 more)
PostProcessing/: BINtoCSV-parallel.py  BINtoCSV.py
blink1/: blink1-tool  libBlink1.dylib
images/: mandelbrot.psd  sph.psd  terminal.psd
output/: BINtoCSV.py  sim-0.csv  sim-1.csv  sim-2.csv  sim-3.csv
shaders/: background.vert  blur.frag  blur_es.frag  container.frag  container.vert  cursor.frag  cursor_es.frag  divider.frag  divider.vert  divider_es.frag  divider_es.vert  font.frag  font.vert  font_es.frag  font_es.vert  horz_blur.vert  horz_blur_es.vert  image.vert  image_es.vert  liquid_particle.frag  liquid_particle.vert  liquid_particle_es.frag  liquid_particle_es.vert  mover_circle.frag  mover_circle.geom  mover_circle.vert  mover_circle_es.frag  mover_circle_es.vert  mover_rectangle.frag  mover_rectangle.vert  particle.frag  particle.geom  particle.vert  particle_es.frag  particle_es.vert  rectangle.frag  rectangle.vert  rectangle_es.vert  render_liquid_texture.frag  render_liquid_texture_es.frag  (+7 more)
src/: background_gl.c  fluid.c  (+67 more)
(+2 files in other folders)
